--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ terraform/*
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
 # Node artifact files
-node_modules/
-dist/
+*node_modules/
+*dist/
 
 # Compiled Java class files
 *.class
