--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,19 @@ terraform
 terraform/
 terraform/*
 .terraform/*
+*log*
+.env
+.env.*
+.vscode/
+.idea/
 
+*.pem
+*.key
+
+*package-lock.json
+*yarn.loc
+*.zip
+*.tar
 
 # These are some examples of commonly ignored file patterns.
 # You should customize this list as applicable to your project.
@@ -20,7 +32,7 @@ terraform/*
 # Node artifact files
 *node_modules/
 *dist/
-
+*node*
 # Compiled Java class files
 *.class
 
